recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:12: error: '=' expected but identifier found.
def carr?() {
        ^FourSquare:19: error: illegal start of simple expression
}
^